<resources>
    <string name="app_name">Covid19 Stats</string>
    <string name="today_death">Today Death :</string>
    <string name="total_test">Total Test :</string>
    <string name="total_cases">Total Cases :</string>
    <string name="total_deaths">Total Deaths :</string>
    <string name="total_recovered">Total Recovered :</string>
    <string name="poster">poster</string>
    <string name="imageview">imageView</string>
    <string name="today_cases">Today Cases :</string>
</resources>
