<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.detail.activity.DetailActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small_size"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="@dimen/layout_editor_absoluteX"
        tools:layout_editor_absoluteY="@dimen/layout_editor_absoluteY">

        <ImageView
            android:id="@+id/ivCountryPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_size"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTodayCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cases" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="Today Cases : "
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTodayCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTodayDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/death" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="@string/today_death"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTodayDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTotalTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="@string/total_test"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTotalTests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTotalCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/totalcases" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="@string/total_cases"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTotalCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTotalDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/totaldeath" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="@string/total_deaths"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTotalDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_size"
            android:layout_marginTop="@dimen/margin_medium_size"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTotalRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/liferecovered"
                android:contentDescription="@string/imageview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:text="@string/total_recovered"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvTotalRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small_size"
                android:layout_marginEnd="@dimen/margin_small_size"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>